base/minio/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio
  namespace: nine
  labels:
    app.kubernetes.io/name: minio
    app.kubernetes.io/part-of: ninekube
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - minio.nine.local
      secretName: minio-tls
  rules:
    - host: minio.nine.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio
                port:
                  number: 9001
